Added preview image when link is shared

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="%PUBLIC_URL%/bitquran-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Baca Al-Qur'an secara Daring" />
+    <meta name="description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
+    <meta name="keywords" content="Bitquran, Al-Qur'an Digital, Al-Qur'an Online, Al-Qur'an Daring, Al-Qur'an Indonesia" />
+    <meta name="twitter:title" content="Bitquran &#8211; Baca Al-Qur'an secara Daring" />
+    <meta name="twitter:description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
+    <meta name="twitter:image" content="https://bitquran.net/cover-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="Bitquran &#8211; Baca Al-Qur'an secara Daring" />
+    <meta property="og:description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
+    <meta property="og:url" content="https://bitquran.net" />
+    <meta property="og:image" content="https://bitquran.net/cover-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -20,11 +31,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bitquran – Baca Al-Qur'an secara Daring</title>
+    <title>Bitquran &#8211; Baca Al-Qur'an secara Daring</title>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="endash" style="display: none;">&#8211;</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
