fix: OpenGraph meta data

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="Bitquran, Al-Qur'an Digital, Al-Qur'an Online, Al-Qur'an Daring, Al-Qur'an Indonesia" />
     <meta name="twitter:title" content="Bitquran &#8211; Baca Al-Qur'an secara Daring" />
     <meta name="twitter:description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/cover-image.png" />
+    <meta name="twitter:image" content="https://bitquran.net/cover-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="Bitquran &#8211; Baca Al-Qur'an secara Daring" />
     <meta property="og:description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
-    <meta property="og:url" content="%PUBLIC_URL%" />
-    <meta property="og:image" content="%PUBLIC_URL%/cover-image.png" />
+    <meta property="og:url" content="https://bitquran.net" />
+    <meta property="og:image" content="https://bitquran.net/cover-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
