--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://bitquran.net/cover-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Bitquran">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
