--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <link rel="icon" type="image/png" href="/logo.png" />
+        <link rel="apple-touch-icon" type="image/png" href="/logo192.png" />
+        <title>Bitquran &#8211; Baca Al-Qur'an secara Daring</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
+        <meta name="keywords" content="Bitquran, Al-Qur'an Digital, Al-Qur'an Online, Al-Qur'an Daring, Al-Qur'an Indonesia" />
+        <meta name="twitter:title" content="Bitquran &#8211; Baca Al-Qur'an secara Daring" />
+        <meta name="twitter:description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
+        <meta name="twitter:image" content="%VITE_APP_URL%/cover-image.png" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="og:title" content="Bitquran &#8211; Baca Al-Qur'an secara Daring" />
+        <meta property="og:description" content="Website yang menyajikan kitab suci Al-Qur'an secara digital. Dilengkapi terjemahan, tafsir, dan audio ayat (murottal)." />
+        <meta property="og:url" content="%VITE_APP_URL%" />
+        <meta property="og:image" content="%VITE_APP_URL%/cover-image.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:site_name" content="Bitquran" />
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" className="text-[#757575] font-rubik font-light text-base leading-[23px] p-0 m-0 bg-[#f8f8f8] overflow-visible overflow-y-auto [&::-webkit-scrollbar]:w-[14px] [&::-webkit-scrollbar-track]:rounded-[7px] [&::-webkit-scrollbar-track]:bg-[#cccccc]/50 [&::-webkit-scrollbar-thumb]:rounded-[7px] [&::-webkit-scrollbar-thumb]:bg-[#cccccc]/90"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
