refactor: ui, route, etc

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta property="og:site_name" content="Bitquran" />
     </head>
     <body>
-        <div id="root" className="text-[#757575] font-rubik font-light text-base leading-[23px] p-0 m-0 bg-[#f8f8f8] overflow-visible overflow-y-auto [&::-webkit-scrollbar]:w-[14px] [&::-webkit-scrollbar-track]:rounded-[7px] [&::-webkit-scrollbar-track]:bg-[#cccccc]/50 [&::-webkit-scrollbar-thumb]:rounded-[7px] [&::-webkit-scrollbar-thumb]:bg-[#cccccc]/90"></div>
+        <div id="root" class="text-[#757575] font-rubik font-light text-base leading-[23px] p-0 m-0 bg-[#f8f8f8] overflow-visible overflow-y-auto [&::-webkit-scrollbar]:w-[14px] [&::-webkit-scrollbar-track]:rounded-[7px] [&::-webkit-scrollbar-track]:bg-[#cccccc]/50 [&::-webkit-scrollbar-thumb]:rounded-[7px] [&::-webkit-scrollbar-thumb]:bg-[#cccccc]/90"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
